<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/main_menu_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/s_add"
        android:titleCondensed="@string/s_add">
    </item>
    <item
        android:id="@+id/main_menu_scanner"
        android:icon="@drawable/ic_scanner"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/s_scanner"
        android:titleCondensed="@string/s_scanner">
    </item>
    <item
        android:id="@+id/main_menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/s_search"
        android:titleCondensed="@string/s_search">
    </item>
    <item
        android:id="@+id/main_menu_order"
        android:icon="@drawable/ic_order"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/s_order"
        android:titleCondensed="@string/s_order">
    </item>
    <item
        android:id="@+id/main_menu_help"
        android:icon="@drawable/ic_help"
        android:orderInCategory="6"
        android:showAsAction="ifRoom"
        android:title="@string/s_help"
        android:titleCondensed="@string/s_help">
    </item>
    <item
        android:id="@+id/main_menu_news"
        android:icon="@drawable/ic_news"
        android:orderInCategory="7"
        android:showAsAction="ifRoom"
        android:title="@string/s_newsapp"
        android:titleCondensed="@string/s_newsapp">
    </item>
    <item
        android:id="@+id/main_menu_pref"
        android:enabled="false"
        android:orderInCategory="8"
        android:showAsAction="ifRoom"
        android:title="@string/s_pref"
        android:titleCondensed="@string/s_pref"
        android:visible="false">
    </item>
    <item
        android:id="@+id/main_menu_about"
        android:icon="@drawable/ic_info"
        android:orderInCategory="9"
        android:showAsAction="ifRoom"
        android:title="@string/s_about"
        android:titleCondensed="@string/s_about">
    </item>

</menu>