<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:orientation="horizontal" >
    <ImageView
        android:id="@+id/imageView_about_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:contentDescription="@string/s_image"
        android:src="@drawable/ic_launcher" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/about_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/s_about_prog" />
        <TextView
            android:id="@+id/about_dbsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/s_about_dbsize" />
        <TextView
            android:id="@+id/about_Version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/s_about_version" />
        <TextView
            android:id="@+id/about_DroidWelt_Copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/s_about_copyright" />
        <TextView
            android:id="@+id/about_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginBottom="10dp"
            android:autoLink="web"
            android:focusableInTouchMode="true"
            android:linksClickable="true"
            android:text="@string/s_about_prog2" />
    </LinearLayout>
</LinearLayout>
